Fixed button padding on iOS breaking menu icon

--- a/Serifu.Web/Assets/header.css
+++ b/Serifu.Web/Assets/header.css
@@ -58,6 +58,7 @@ body > header {
   .menu-button {
     display: none;
     border: none;
+    padding: 0;
     font-size: 2.25rem;
     cursor: pointer;
   }
